<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SmartControlActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/micro_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="@font/tmonmonsori"
            android:textColor="#ff6262"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/microdust_check"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_select"
            android:layout_centerInParent="true"
            android:layout_below="@id/micro_class"
            android:fontFamily="@font/tmonmonsori"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
        android:id="@+id/spinner_dosi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_gudong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/microdust_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/tmonmonsori"
            android:text="@string/complete"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/naver_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naver_rank"
            android:textSize="25sp"
            android:fontFamily="@font/tmonmonsori"
            android:layout_alignParentTop="true"
            android:textColor="#ff6262"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naver_guide"
            android:fontFamily="@font/tmonmonsori"
            android:layout_below="@id/naver_rank"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/naver_searh_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_rank"
            android:fontFamily="@font/tmonmonsori"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/th_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_guidance"
            android:textSize="25sp"
            android:fontFamily="@font/tmonmonsori"
            android:layout_alignParentTop="true"
            android:textColor="#ff6262"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/th_graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tmonmonsori"
            android:layout_below="@id/th_guide"
            android:layout_marginStart="100sp"
            android:text="@string/th_graph" />
        <Button
            android:id="@+id/dust_graph_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tmonmonsori"
            android:layout_below="@id/th_guide"
            android:layout_toRightOf="@id/th_graph_button"
            android:text="@string/dust_graph"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/smart_mode_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_control_msg"
            android:textSize="25sp"
            android:fontFamily="@font/tmonmonsori"
            android:layout_alignParentTop="true"
            android:textColor="#ff6262"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/smart_on_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tmonmonsori"
            android:layout_below="@id/smart_mode_guide"
            android:layout_marginStart="100sp"
            android:text="@string/on"/>
        <Button
            android:id="@+id/smart_off_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tmonmonsori"
            android:layout_below="@id/smart_mode_guide"
            android:layout_toRightOf="@id/smart_on_btn"
            android:text="@string/off"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/http_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="http://192.168.0.4"
            android:fontFamily="@font/sdmisaeng"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/http_addr_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/http_addr"
            android:layout_centerInParent="true"
            android:text="@string/save"/>
    </RelativeLayout>


</LinearLayout>
