<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_setting_act_color"
    tools:context=".SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/textview_ip"/>
    <EditText
        android:id="@+id/IdEditText"
        android:layout_width="match_parent"
        android:fontFamily="@font/notosans_cjk_kr_r"
        android:textSize="15sp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/notosans_cjk_kr_r"
        android:textSize="20sp"
        android:text="@string/textview_port"/>
    <EditText
        android:id="@+id/PortEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_cjk_kr_r"
        android:textSize="15sp"
        android:inputType="number"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_cjk_kr_r"
            android:textSize="16sp"
            android:text="@string/save_button"/>
    </RelativeLayout>
</LinearLayout>