<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#222222"
    tools:context=".LightControlActivity">
    <LinearLayout
        android:id="@+id/LightLayoutView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1C1C1C1C"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/LightImage"
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:src="@drawable/light_off"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/light_control_bar_text"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/notosans_cjk_kr_r"/>
        <SeekBar
            android:id="@+id/SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="99"
            android:progress="0"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/SendPWM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_control_data_text"
                android:fontFamily="@font/notosans_cjk_kr_r"/>
            <Button
                android:id="@+id/TcpIpSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/comsetting"
                android:fontFamily="@font/notosans_cjk_kr_r"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/control_info"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:fontFamily="@font/sdmisaeng"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/LightControlInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="밝기 : 1"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:fontFamily="@font/sdmisaeng"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>